tests/algorithms/x/Clojure/graphs/minimum_path_sum.error
run: exit status 1
Syntax error compiling at (/workspace/mochi/tests/algorithms/x/Clojure/graphs/minimum_path_sum.clj:46:276).
Unable to resolve symbol: error in this context

Full report at:
/tmp/clojure-325643031983235026.edn
